docs: push project

--- a/index.html
+++ b/index.html
@@ -8,6 +8,45 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <nav >
+      <div class="nav-container container">
+        <h2><a class="logo" href="#">Topgram</a></h2>
+      </div>
+    </nav>
+    <main class="container">
+      <section class="section-profile">
+        <div class="profile-img"></div>
+        <div class="profile-info">
+          <h2 class="username">winniemonica</h2>
+          <ul class="profile-engagement">
+            <li>
+              <span class="num">7,131</span>
+              <span>posts</span>
+            </li>
+            <li>
+              <span class="num">504m</span>
+              <span>followers</span>
+            </li>
+            <li>
+              <span class="num">1</span>
+              <span>following</span>
+            </li>
+          </ul>
+          <div class="profile-summary">
+            <div class="name">Winnie Monica</div>
+            <div class="bio">Here's is your bio</div>
+            <div class="website">
+              <a rel="nofollow" target="_blank" href="https://instagram.com/frans_huang">
+                www.instagram.com/winniemonica/
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-gallery">
+        <div class="image-container"></div>
+      </section>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
